Fix wrap issue between the `header` and first item in `Good to know`

--- a/style.css
+++ b/style.css
@@ -373,6 +373,7 @@ main .deck--featured .card .card-title a:after {
 }
 
 .deck--numbered-list .deck-header {
+	display: block;
 	margin: 0 0 3rem;
 }
 
