--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -357,6 +357,7 @@ main .deck--featured .card .card-title a:after {
 }
 
 .deck--numbered-list .deck-header {
+	display: block;
 	margin: 0 0 3rem;
 }
 
